tuidom-macros/tests/ui/unknown_property.rs
use tuidom_macros::style;

fn main() {
    let _ = style! {
        colour: white,
    };
}
